--- a/Workflow/dotnet5-testapis-results-docker-acr-azureappservice.yml
+++ b/Workflow/dotnet5-testapis-results-docker-acr-azureappservice.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 5.0.102
 
     - name: Build de imagem
       run: |
